# ParaAttention

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  quick_install.sh  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml  python_packages.yml
cubic_examples/: run_cogvideox.py  run_mochi.py
doc/: fastest_flux.md  fastest_hunyuan_video.md
examples/: run_cogvideox.py  run_flux.py  run_hunyuan_video.py  run_mochi.py
first_block_cache_examples/: run_cogvideox.py  run_flux.py  run_hunyuan_video.py  run_mochi.py  run_wan.py
focus_attn_examples/: run_cogvideox.py  run_hunyuan_video.py  run_mochi.py
parallel_examples/: run_cogvideox.py  run_flux.py  run_hunyuan_video.py  run_mochi.py  run_wan.py
src/akvattn/: __init__.py
src/para_attn/: __init__.py  config.py  para_attn_interface.py  primitives.py  sparse_attn.py  utils.py
src/para_attn/context_parallel/: __init__.py
src/para_attn/context_parallel/diffusers_adapters/: __init__.py  cogvideox.py  flux.py  hunyuan_video.py  mochi.py  wan.py
src/para_attn/cubic_attn/diffusers_adapters/: __init__.py  cogvideox.py  mochi.py
src/para_attn/distributed/: mp_runner.py
src/para_attn/first_block_cache/: utils.py
src/para_attn/ops/: __init__.py
src/para_attn/parallel_vae/: __init__.py
src/para_attn/utils/: dist_utils.py
struct_sparse_examples/: run_cogvideox.py  run_hunyuan_video.py  run_mochi.py
tests/: __init__.py  conftest.py  test_interface.py
tests/context_parallel/: test_diffusers_adapters.py
tests/ops/: test_ops.py
(+17 files in other folders)
