[project]

name = "akvattn"
# version = "0.0.1"  # Remove any existing version parameter.
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.8"
authors = [
    {name = "Zeyi Cheng", email = "ichengzeyi@gmail.com"},
]
description = "Sequence Parallel Attention with Asynchronous Key Value Gathering"

[project.urls]

Repository = "https://github.com/chengzeyi/AsyncKVAttention"

[build-system]

requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
# build-backend = "setuptools.build_meta"

[tool.black]

line-length = 120
target-version = ["py38"]
